--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongodb": "^4.2.2",
     "mongoose": "^6.1.2",
     "morgan": "1.10.0",
+    "multer": "^1.4.4",
     "uuidv4": "^6.2.12"
   },
   "devDependencies": {
