--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 DB_HOST=mongodb+srv://Iliya:FlVFkFYctwEt63f2@cluster0.x6i3d.mongodb.net/Phone-Book?retryWrites=true&w=majority
+DB_TEST_HOST=mongodb+srv://Iliya:FlVFkFYctwEt63f2@cluster0.x6i3d.mongodb.net/test?retryWrites=true&w=majority
 SECRET_KEY=kdskgfksmgSFGS2SFF55$DFL77$
