--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest "
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.6.0",
     "bcryptjs": "^2.4.3",
     "cors": "2.8.5",
     "cross-env": "7.0.3",
@@ -24,6 +25,8 @@
     "mongoose": "^6.1.2",
     "morgan": "1.10.0",
     "multer": "^1.4.4",
+    "nanoid": "^3.2.0",
+    "nodemailer": "^6.7.2",
     "uuidv4": "^6.2.12"
   },
   "devDependencies": {
